November 5, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/draw.c: Check for centering during blits.

November 4, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/sio.c: Fixed the format of new memory card file, which solves
   the saving problem with Final Fantasy 6.
 * macosx/EmuThread.h: Added "Run BIOS" menu item.
 * macosx/PcsxController.h: Likewise.
 * macosx/EmuThread.m: Likewise.
 * macosx/PcsxController.m: Likewise.
 * macosx/English.lproj/PCSX.nib/objects.nib: Likewise.
 * macosx/English.lproj/PCSX.nib/info.nib: Likewise.
 * macosx/English.lproj/PCSX.nib/classes.nib: Likewise.
 * macosx/main.m: Reload plugins at each time emulation starts.
 * macosx/Info.plist: Changed version number.

November 3, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/HIDInput/src/PlugPAD.c: Implemented PADstartPoll() and
   PADpoll().
 * plugins/dfxvideo/key.c: Handle Fullscreen toggle message for Mac OS X.
 * macosx/plugins/DFXVideo/macsrc/PluginGLView.m: Fixed one byte-order issue.

November 2, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * macosx/plugins/DFXVideo: Added project file and necessary codes for
   building existing dfxvideo sources for Mac OS X. (NOT bug-free yet!!!)
 * dfxvideo/gpu.c: Made necessary changes for Mac OS X build.
 * dfxvideo/externals.h: Likewise.
 * macosx/plugins/HIDInput/HIDInput.xcodeproj/project.pbxproj: Use
   psemu_plugin_defs.h from libpcsxcore.
 * macosx/plugins/HIDInput/src/PlugPAD.c: Likewise.
 * macosx/plugins/CDDeviceInterface/CDDeviceInterfacePlugin.xcodeproj/
   project.pbxproj: Likewise.
 * macosx/plugins/CDDeviceInterface/src/PlugCD.c: Likewise.
 * macosx/plugins/HIDInput/src/PSEmu_Plugin_Defs.h: Removed.
 * macosx/plugins/CDDeviceInterface/src/PSEmu_Plugin_Defs.h: Removed.
 * macosx/PcsxController.m: Don't allow starting game when Preferences dialog
   box is opened. Don't allow opening the Preferences dialog when game is
   running.

November 1, 2009 Wei Mingzhi <weimingzhi@gmail.com>
